--- a/movies-etl.ipynb
+++ b/movies-etl.ipynb
@@ -6281,6 +6281,45 @@
    ],
    "outputs": [],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\r\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\r\n",
+    "                .rename({'userId':'count'}, axis=1) \\\r\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "source": [
+    "movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
