--- a/ETL_clean_kaggle_data.ipynb
+++ b/ETL_clean_kaggle_data.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "source": [
     "# 1 Add the function that takes in three arguments;\r\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\r\n",
@@ -243,7 +243,8 @@
     "                .rename({'userId':'count'}, axis=1) \\\r\n",
     "                .pivot(index='movieId',columns='rating', values='count')\r\n",
     "    movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\r\n",
-    "\r\n",
+    "    movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\r\n",
+    "    \r\n",
     "    return wiki_movies_df, movies_with_ratings_df, movies_df\r\n"
    ],
    "outputs": [],
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "source": [
     "# 10. Create the path to your file directory and variables for the three files.\r\n",
     "file_dir = 'Resources/'\r\n",
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\r\n",
     "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "source": [
     "# 12. Set the DataFrames from the return statement equal to the file names in Step 11. \r\n",
     "wiki_movies_df = wiki_file\r\n",
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "source": [
     "# 13. Check the wiki_movies_df DataFrame. \r\n",
     "wiki_movies_df.head()"
@@ -534,14 +535,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "source": [
     "# 14. Check the movies_with_ratings_df DataFrame.\r\n",
     "movies_with_ratings_df.head()"
@@ -572,18 +573,18 @@
        "3                   NaN    https://en.wikipedia.org/wiki/Alice_(1990_film)   \n",
        "4                   NaN      https://en.wikipedia.org/wiki/Almost_an_Angel   \n",
        "\n",
-       "                               imdb_link  runtime      budget  ...  0.5 1.0  \\\n",
-       "0  https://www.imdb.com/title/tt0098987/    104.0  49000000.0  ...  NaN NaN   \n",
-       "1  https://www.imdb.com/title/tt0098994/    114.0   6000000.0  ...  NaN NaN   \n",
-       "2  https://www.imdb.com/title/tt0099005/    112.0  35000000.0  ...  NaN NaN   \n",
-       "3  https://www.imdb.com/title/tt0099012/    102.0  12000000.0  ...  NaN NaN   \n",
-       "4  https://www.imdb.com/title/tt0099018/     95.0  25000000.0  ...  3.0 NaN   \n",
+       "                               imdb_link  runtime      budget  ...  0.5  1.0  \\\n",
+       "0  https://www.imdb.com/title/tt0098987/    104.0  49000000.0  ...  0.0  0.0   \n",
+       "1  https://www.imdb.com/title/tt0098994/    114.0   6000000.0  ...  0.0  0.0   \n",
+       "2  https://www.imdb.com/title/tt0099005/    112.0  35000000.0  ...  0.0  0.0   \n",
+       "3  https://www.imdb.com/title/tt0099012/    102.0  12000000.0  ...  0.0  0.0   \n",
+       "4  https://www.imdb.com/title/tt0099018/     95.0  25000000.0  ...  3.0  0.0   \n",
        "\n",
        "   1.5  2.0  2.5   3.0   3.5   4.0   4.5   5.0  \n",
-       "0  NaN  NaN  NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "1  NaN  NaN  NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "2  NaN  NaN  NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "3  NaN  NaN  NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "0  0.0  0.0  0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "1  0.0  0.0  0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "2  0.0  0.0  0.0   0.0   0.0   0.0   0.0   0.0  \n",
+       "3  0.0  0.0  0.0   0.0   0.0   0.0   0.0   0.0  \n",
        "4  3.0  2.0  5.0  26.0  37.0  46.0  16.0  11.0  \n",
        "\n",
        "[5 rows x 41 columns]"
@@ -644,16 +645,16 @@
        "      <td>104.0</td>\n",
        "      <td>49000000.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -668,16 +669,16 @@
        "      <td>114.0</td>\n",
        "      <td>6000000.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -692,16 +693,16 @@
        "      <td>112.0</td>\n",
        "      <td>35000000.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -716,16 +717,16 @@
        "      <td>102.0</td>\n",
        "      <td>12000000.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -741,7 +742,7 @@
        "      <td>25000000.0</td>\n",
        "      <td>...</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>5.0</td>\n",
@@ -758,14 +759,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "source": [
     "# 15. Check the movies_df DataFrame. \r\n",
     "movies_df.head()"
@@ -1010,7 +1011,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 9
     }
    ],
    "metadata": {}
