--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -260,7 +260,7 @@
     "\r\n",
     "        # print out the range of rows that are being imported\r\n",
     "        print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\r\n",
-    "        data.to_sql(name='ratings', con=engine, if_exists='append')\r\n",
+    "        data.to_sql(name='ratings', con=engine, if_exists='replace')\r\n",
     "\r\n",
     "        # increment the number of rows imported by the size of 'data'\r\n",
     "        rows_imported += len(data)\r\n",
